--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -1,5 +1,6 @@
-<html>
+{% extends 'master.html' %}
+{% block body %}
 {% for user in users %}
 <h2>User {{ user.id }}, age {{ user.age }} has {{ user.ratings|length }} ratings</h2>
 {% endfor %}
-</html>
+{% endblock %}
