--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -1,6 +1,12 @@
 {% extends 'master.html' %}
 {% block body %}
-{% for user in users %}
-<h2>User {{ user.id }}, age {{ user.age }} has {{ user.ratings|length }} ratings</h2>
-{% endfor %}
+    {% for user in users %}
+            User <a href="/profile/{{user.id}}">{{ user.id }}</a>, age {{ user.age }} has {{ user.ratings|length }} ratings<br>
+    {% endfor %}
+        {% if page_id > 0 %}
+            <a href="{{url_for('show_users', page_id=(users[0].id)-31)}}">Previous page</a>
+        {% endif %}
+        {% if users|length == 30 %}
+            <a href="{{url_for('show_users', page_id=users[-1].id)}}">Next page</a>
+        {% endif %}
 {% endblock %}
