--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
 {% block body %}
 <form class="signin" method="POST">
     <h2 class="signin-heading">Please sign in</h2>
-    <ul>
+    <ul class = "flash_message">
         {% for message in get_flashed_messages() %}
             <li>{{ message }}</li>
         {% endfor %}
     </ul>
+
     <input type="text" class="form-control" placeholder="Email" name="email">
     <input type="password" class="form-control" placeholder="Password" name="password">
     <a href="/register">Register a new account</a>
