--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,10 +1,12 @@
 {% extends 'master.html' %}
 {% block body %}
 
-<h1>{{user_id}} {{email}}</h1>
+<h1>{{email}}</h1>
 
 {% for movie in movie_ratings %}
+<div class="listing">
     <b>Movie:</b> <a href="/movie_title/{{movie}}">{{movie}}</a><br>
-    Rating: {{movie_ratings[movie]}}<br>
+    Rating: {{movie_ratings[movie]}}
+</div>
 {% endfor %}
 {% endblock %}
